# infinity_war

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/ersow_comm/: .catkin  .rosinstall  setup.sh
devel/.private/ersow_comm/include/ersow_comm/: data_agent0.h  data_agent1.h  data_agent2.h  data_agent3.h
devel/.private/ersow_comm/lib/ersow_comm/: comm_node  learn_node  ratdma_node  strategy_node
devel/.private/ersow_comm/lib/pkgconfig/: ersow_comm.pc
devel/include/ersow_comm/: data_agent0.h  data_agent1.h  data_agent2.h  data_agent3.h
devel/lib/ersow_comm/: comm_node  learn_node  ratdma_node  strategy_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  ersow_comm.pc
devel/lib/python2.7/dist-packages/ersow_comm/: __init__.py
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/ersow_comm/cmake/: ersow_comm-msg-extras.cmake  ersow_comm-msg-paths.cmake  ersow_commConfig-version.cmake  ersow_commConfig.cmake
logs/ersow_comm/: build.cmake.000.log.stderr  build.make.000.log.stderr
src/build-ersow_comm-Desktop-Default/: CMakeCache.txt
src/ersow_comm/: CMakeLists.txt
src/ersow_comm/launch/: ersow_comm.launch
src/ersow_comm/msg/: data_agent0.msg  data_agent1.msg  data_agent2.msg  data_agent3.msg
src/ersow_comm/src/: comm.cpp  learn.cpp  ratdma.cpp  strategy.cpp
src/ersow_comm/src/lib/: feedback.h  loc.h  localization.h  state.h  target.h  vector.h
src/ersow_comm/src/ratdma/: multicast.h
src/ersow_comm/src/rtdb/: rtdb_api.h  rtdb_comm.h  rtdb_defs.h  rtdb_user.h
src/ersow_comm/src/rtdb/config/: rtdb.ini
(+55 files in other folders)
